2017-06-05  Markus Gans  <guru.mail@muenster.de>
	* The focus and active flag is set centrally in FWidget

2017-05-20  Markus Gans  <guru.mail@muenster.de>
	* Recalculate the horizontal FListBox scroll bar size 
	  on lazy conversion

2017-05-19  Markus Gans  <guru.mail@muenster.de>
	* FListBox: Import of data from a container via 
	  "lazy conversion" during item print

2017-04-23  Markus Gans  <guru.mail@muenster.de>
	* Import of data from a standard container in FListBox 
	  is now possible
	* The new "listbox" example shows the handling with 
	  standard containers

2017-04-17  Markus Gans  <guru.mail@muenster.de>
	* Speed up FString::setNumber() by using a decimal 
	  string lookup table
	* FString allocates no new memory if the size is sufficient

2017-04-15  Markus Gans  <guru.mail@muenster.de>
	* Fix unsigned integer underflow in FString::_insert()

2017-04-14  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles also under OpenBSD
	* The alt key now always generates an esc prefix 
	  on an OpenBSD and a NetBSD console

2017-04-11  Markus Gans  <guru.mail@muenster.de>
	* Enable xterm "metaSendsEscape" switch

2017-04-09  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles now also under NetBSD
	* Rename preprocessor macro names with leading underscore

2017-04-08  Markus Gans  <guru.mail@muenster.de>
	* Looking in /etc/ttys for the type of terminal

2017-04-06  Markus Gans  <guru.mail@muenster.de>
	* Change cursor style on a FreeBSD console

2017-04-05  Markus Gans  <guru.mail@muenster.de>
	* Replace non-printable characters for Tera Term and 
	  Cygwin terminal directly at start-up. Special cases 
	  in the code are no longer necessary.
	* New Method setInsertCursorStyle() to change the appearance 
	  of a cursor

2017-04-02  Markus Gans  <guru.mail@muenster.de>
	* Remap the meta key to left alt key at runtime 
	  on the FreeBSD console for the accelerator key access
	  (Console switching is still possible with 