@@ -297,12 +297,16 @@ void FToggleButton::onAccel (FAccelEvent* ev)
   if ( ! hasFocus() )
   {
     FWidget* focused_widget = static_cast<FWidget*>(ev->focusedWidget());
-    FFocusEvent out (fc::FocusOut_Event);
-    FApplication::queueEvent(focused_widget, &out);
-    setFocus();
 
-    if ( focused_widget )
-      focused_widget->redraw();
+    if ( focused_widget->isWidget() )
+    {
+      FFocusEvent out (fc::FocusOut_Event);
+      FApplication::queueEvent(focused_widget, &out);
+      setFocus();
+
+      if ( focused_widget )
+        focused_widget->redraw();
+    }
   }
 
   if ( isRadioButton() )
